# Yuzora

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README.zh-TW.md  eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.claude/: settings.json
.claude/loop/: LEDGER.md
.github/: clippy-baseline.json
.github/scripts/: verify-clippy-baseline.rb
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
adapters/yuzora-pi-acp/: package.json  tsconfig.json
docs/: operations.md  upgrade.md
docs/agents/: domain.md  issue-tracker.md  pull-request-workflow.md  triage-labels.md
docs/design/: README.md
docs/html/: acp-功能分析-2026-07-07.html  acp-協定確認與實作評估-2026-07-10.html  acp-統一架構-結案-2026-07-08.html  acp-統一架構評估-2026-07-07.html  agentzone-acp-components-evaluation-report-2026-07-20.html  agentzone-atelier-cot-sample-2026-07-21.html  agentzone-redesign-directions-2026-07-21.html  context-menu-design-gap-analysis-2026-07-03.html  fable-institution-closeout-report-2026-07-03.html  git-surface-design-gap-analysis-2026-07-03.html  github-cicd-release-plan-2026-07-10.html  group-header-tabbar-gap-analysis-2026-07-02.html  issue-15-windows-acp-runtime-analysis-2026-07-19.html  issues-analysis-report-2026-07-20.html  yuzora-acp-architecture-comparison-2026-07-07.html  yuzora-architecture-design-report-2026-07-11.html  yuzora-fix-batch-closeout-2026-07-07.html  yuzora-improvement-report-2026-07-07.html  yuzora-logger-analysis-2026-07-07.html  yuzora-loop-closed-loop-design-2026-07-03.html  yuzora-m2-agent-loop-closeout-2026-07-03.html  yuzora-m3-lsp-closeout-2026-07-05.html  yuzora-m4-terminal-preview-closeout-2026-07-06.html  yuzora-m6-feedback-batch-closeout-2026-07-07.html  yuzora-next-step-analysis-report-2026-07-10.html  yuzora-ui-phase-report-2026-07-02.html  yuzora-windows-readiness-report-2026-07-11.html
docs/recap/: yuzora-m1-closeout-m2-git-kickoff-2026-07-02-23-00-25.html
docs/upstream-issues/: pi-acp-epipe-2026-07-07.md
fixtures/: fake-acp-agent-0b.mjs  gen-encoding-fixtures.ts  gen-fixtures.ts  gen-git-fixtures.ts  gen-lsp-fixtures.ts  gen-preview-fixtures.ts
fixtures/pi-acp-contract/: README.md  check.ts  compare.ts  config-probe.ts  contract.ts  cross-runtime.ts  driver.ts  elicitation-probe.ts  multi-session.ts  question-probe.ts  record.ts
scripts/: finalize-updater-metadata.test.ts  finalize-updater-metadata.ts  release-notes.test.ts  release-notes.ts  verify-updater-release-contract.ts  verify-version-consistency.ts
site/: downloads.js  index.html
site-remotion/: package.json
site-remotion/src/: AgentZone.tsx  Hero.tsx  RemoteDb.tsx  Root.tsx  theme.ts  (+3 more)
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_process.rs  agent_terminal.rs  agent_versions.rs  askpass.rs  asset_scope.rs  db_connection_actor.rs  db_credentials.rs  db_profiles.rs  db_result_session.rs  db_service.rs  dev_server_detect.rs  env_path.rs  file_content.rs  fs_service.rs  git_log.rs  git_service.rs  git_status.rs  git_watch.rs  lib.rs  logging.rs  lsp_adapters.rs  lsp_config.rs  lsp_download.rs  lsp_service.rs  main.rs  perf_service.rs  preview_server.rs  preview_webview.rs  process_kill.rs  process_service.rs  pty_service.rs  search_service.rs  ssh_service.rs  watcher.rs  workspace_path_index.rs
src-tauri/src/lsp_download/: plan.rs
src-tauri/src/lsp_service/: framing.rs
src-tauri/tests/: database_integration.rs
tests/: site-downloads.test.js
(+410 files in other folders)
