[package]
name = "yuzora"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yuzora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `unstable` unlocks the multiwebview API (Window::add_child) the preview panel
# uses to overlay an external-URL browser webview over the panel region (P3).
tauri = { version = "2", features = ["unstable", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
keyring = "4.1.4"
secrecy = { version = "0.10.3", features = ["serde"] }
zeroize = "1.9.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
encoding_rs = "0.8"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
ignore = "0.4"
grep-searcher = "0.1"
grep-regex = "0.1"
rand = "0.10.2"
ureq = "3.3.0"
sha2 = "0.11.0"
flate2 = "1"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
libc = "0.2"
portable-pty = "0.9.0"
rusqlite = { version = "0.40.1", features = ["bundled", "hooks"] }
russh = "0.62.2"
# ssh_service opens an SFTP subsystem over the existing russh channel (F5); the
# crate is stream-based (feeds off channel.into_stream()) so it stays version-
# independent of russh itself.
russh-sftp = "2.3.0"
# tauri bundles tokio; ssh_service needs select!/timeout which async_runtime
# doesn't re-export, so name tokio directly (already resolved in the lock).
tokio = { version = "1", features = ["macros", "time", "sync", "net"] }
# perf_service samples only this process's cpu/memory; the `system` feature is
# all it needs — drop disk/network/component/user to keep the build lean.
sysinfo = { version = "0.39.6", default-features = false, features = ["system"] }
# db_service network backends (F2). tokio-postgres is the pure-tokio PG driver;
# tiberius the MSSQL driver over a tokio TcpStream (compat shim from tokio-util).
# TLS reuses the existing rustls+ring provider (russh already pulls rustls 0.23);
# tokio-postgres-rustls/rustls are pinned to `ring` so a second (aws-lc) provider
# can't get installed and panic builder(). PG NUMERIC uses the custom lossless
# binary decoder in db_service; webpki-roots supplies the PG TLS root store.
tokio-postgres = { version = "0.7.18", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
tiberius = { version = "0.12.3", path = "vendor/tiberius-0.12.3-yuzora", default-features = false, features = ["tds73", "rustls", "chrono"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
tokio-postgres-rustls = { version = "0.14.0", default-features = false, features = ["ring"] }
webpki-roots = "1.0.8"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
uuid = { version = "1", default-features = false, features = ["v4"] }
tiny_http = "0.12.0"
tempfile = "3"
tauri-plugin-window-state = "2.4.1"

[dev-dependencies]
